# cppGoogleTestDLProject

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt  theApp.cpp
doc/: DoesThisWork.md  Doxyfile.in  main.md
include/: Account.hpp
include/gend/: accountLib.hpp
scripts/: genXcode.sh
src/: Account.cpp  CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main_tests.cpp
